--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -16,7 +16,10 @@
   <% if logged_in? %>
    <% @comments.each do |c| %>
     <div>
-     <%= c.user.name unless c.user.blank? %>
+     コメント投稿者 : <%= c.user.name unless c.user.blank? %>
+     <br>
+     コメント日時：<%= c.created_at %>
+     <%= button_to "削除", blog_comment_path(:blog_id => c.blog_id, :comment_id => c.id), method: :delete %>
      <br>
      <%= c.content %>
     </div>
@@ -31,11 +34,10 @@
   <% else %>
    <% @comments.each do |c| %>
     <div>
-     <%= c.user.name unless c.user.blank? %>
+    コメント投稿者 : <%= c.user.name unless c.user.blank? %>
      <br>
-     <%= c.content %>
+     コメント日時：<%= c.content %>
     </div>
-     <br>
    <% end %>
   <% end %>
 </div>
