--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,43 +1,54 @@
-<h1>記事詳細</h1>
+<div class="blog_show_title">
+  <%= @blog.title %>
+</div>
 
-  <p>
-  タイトル：<%= @blog.title %>
-  </p>
-  <p>
-  コンテンツ：<%= @blog.content %>
-  </p>
+<div class="container">
+  <div class="row">
+      <div class= "col-md-11 col-md-offset-1">
+        <p>
+          <%= safe_join(@blog.content.split("\n"),tag(:br)) %>
+        </p>
 
+        <div>
+          <p>
+            <%= link_to "一覧に戻る", blogs_path, class: "btn btn-default" %>
+          </p>
+        </div>
+
+        <div class="comment-wrapper border-top　mb-10">
+          <p class="mt-5">
+            コメント一覧
+          </p>
+          <% if logged_in? %>
+            <% @comments.each do |c| %>
+              <div>
+                コメント投稿者 : <%= c.user.name unless c.user.blank? %>
+                <br>
+                コメント日時：<%= l c.created_at %>
+                <br>
+                コメント
+                <br>
+                <%= safe_join(c.content.split("\n"),tag(:br)) %>
+                <%= button_to "削除", blog_comment_path(:blog_id => c.blog_id, :comment_id => c.id), method: :delete %>
+              </div>
+              <br>
+            <% end %>
+            <%= form_with(model: [@blog, @comment], local: true) do |f| %>
+              <%= f.text_area :content, class: "form-control", rows: 5 %>
+              <%= button_tag type: "submit", class: "btn btn-success" do %>
+                コメントする
+            <% end %>
+          <% end %>
+          <% else %>
+          <% @comments.each do |c| %>
+            <div>
+              コメント投稿者 : <%= c.user.name unless c.user.blank? %>
+              <br>
+              コメント日時：<%= l c.content %>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 <div>
-    <%= link_to "戻る", blogs_path %>
-</div>
-
-<div class="comment-wrapper border-top　mb-10">
- <p class="mt-5">コメント一覧</p>
-  <% if logged_in? %>
-   <% @comments.each do |c| %>
-    <div>
-     コメント投稿者 : <%= c.user.name unless c.user.blank? %>
-     <br>
-     コメント日時：<%= l c.created_at %>
-     <%= button_to "削除", blog_comment_path(:blog_id => c.blog_id, :comment_id => c.id), method: :delete %>
-     <br>
-     <%= c.content %>
-    </div>
-    <br>
-   <% end %>
-   <%= form_with(model: [@blog, @comment], local: true) do |f| %>
-    <%= f.text_area :content, class: "form-control", rows: 5 %>
-    <%= button_tag type: "submit", class: "btn btn-success" do %>
-     コメントする
-    <% end %>
-   <% end %>
-  <% else %>
-   <% @comments.each do |c| %>
-    <div>
-    コメント投稿者 : <%= c.user.name unless c.user.blank? %>
-     <br>
-     コメント日時：<%= l c.content %>
-    </div>
-   <% end %>
-  <% end %>
-</div>
