--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,20 +1,27 @@
 <h1>新規ブログ投稿</h1>
 
-  <%= form_for(@blog) do |f| %>
-   <%= render 'layouts/error_messages', model: f.object %>
-   <p>
-   <%= f.label :title,"タイトル" %>
-   <%= f.text_field :title %>
-   </p>
-   <p>
-   <%= f.label :content,"コンテンツ" %>
-   <%= f.text_field :content %>
-   </p>
-   <p>
-   <%= f.submit "登録" %>
-   </p>
-  <% end %>
-
-<div>
-    <%= link_to "戻る", blogs_path %>
+<div class="container">
+  <div class="row">
+    <div class= "col-md-11 col-md-offset-1">
+      <div class="blog_new">
+        <%= form_for(@blog) do |f| %>
+          <%= render 'layouts/error_messages', model: f.object %>
+          <p>
+            <%= f.label :title,"タイトル" %>
+            <br>
+            <%= f.text_field :title %>
+          </p>
+          <p>
+            <%= f.label :content,"コンテンツ" %>
+            <br>
+            <%= f.text_area :content %>
+          </p>
+          <p>
+            <%= f.submit "登録", class: "btn btn-success" %>
+            <%= link_to "一覧に戻る", blogs_path, class: "btn btn-default" %>
+          </p>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
