--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,3 +1,11 @@
+<% if flash[:success] %>
+  <p><%= flash[:success] %></p>
+<% end %>
+
+<% if flash[:danger] %>
+  <p><%= flash[:danger] %></p>
+<% end %>
+
 <div class="blog_show_title">
   <%= @blog.title %>
 </div>
